<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Nerd Nite</string>
    <string name="splash_title">nerd nite</string>
    <string name="be_there">BE THERE AND BE SQUARE</string>
    <string name="select_a_location">Select a Location</string>
    <string name="next_event_string">NEXT EVENT</string>
    <string name="next_event_location_at">AT</string>
    <string name="learn_more">LEARN MORE</string>
    <string name="previous">PREVIOUS</string>
    <string name="events">EVENTS</string>
    <string name="upcoming">UPCOMING</string>
    <string name="est">est.</string>
    <string name="meet_the_bosses">MEET THE BOSSES</string>
    <string name="was">WAS</string>
    <string name="vote_up">vote up your favorite talk</string>
    <string name="view_pics">view the pics</string>
    <string name="title_activity_event_details">EventDetailsActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="buy_tickets">BUY TICKETS</string>


</resources>